WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47369
REGRESSION(
r67568
-
r67643
): Some HTML/CSS renders upside down and backwards on Leopard
https://bugs.webkit.org/show_bug.cgi?id=47369
Summary
REGRESSION(r67568-r67643): Some HTML/CSS renders upside down and backwards on...
Edward Sabol
Reported
2010-10-07 12:42:40 PDT
I was using the latest Webkit Nightly when I noticed that
http://www.apple.com/ipad/pompeii/
wasn't rendering correctly. The "iPad Apps They Used" sidebar on the right renders upside down and backwards, and the large picture and picture-nagivation interface which should be at the top of the web page renders upside down and at the bottom of the web page instead of the top. This is apparently a PowerPC-only problem. I had someone #webkit check it for me on Intel using a recent Webkit Nightly build, and he didn't see any problem. Using the Webkit Nightly builds, I've narrowed down the regression to be between
r67568
(which renders correctly) and
r67643
(which renders incorrectly). I hope someone can use git-bisect to further narrow down the regression to a specific revision.
Attachments
Patch
(18.22 KB, patch)
2010-10-20 10:09 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-10-08 12:01:54 PDT
Broken by
http://trac.webkit.org/changeset/67576
Simon Fraser (smfr)
Comment 2
2010-10-08 12:02:48 PDT
I think this is a Leopard issue, rather than a PPC issue.
Simon Fraser (smfr)
Comment 3
2010-10-08 12:03:16 PDT
<
rdar://problem/8530595
>
Simon Fraser (smfr)
Comment 4
2010-10-19 10:52:35 PDT
This is an interaction with the code added for
bug 48401
, so it's only apparent on pages over 2048px tall.
Simon Fraser (smfr)
Comment 5
2010-10-19 11:19:04 PDT
Previous comment should have referred to
bug 27272
, which resulted in
r48401
.
Simon Fraser (smfr)
Comment 6
2010-10-20 07:59:13 PDT
***
Bug 45971
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 7
2010-10-20 10:09:58 PDT
Created
attachment 71302
[details]
Patch
Simon Fraser (smfr)
Comment 8
2010-10-20 13:08:10 PDT
http://trac.webkit.org/changeset/70166
WebKit Review Bot
Comment 9
2010-10-20 13:27:27 PDT
http://trac.webkit.org/changeset/70166
might have broken Qt Linux Release
Kevin M. Dean
Comment 10
2010-10-22 10:14:15 PDT
My
Bug 45971
was resolved as duplicate of this one, but something introduced with
r70098
is breaking things entirely and I don't know if it's unrelated or if this patch fixes anything. Using Youtube's HTML5 setting, videos no longer appear at all and the video thumbnails don't appear. Read my original bug for more details. The latest glitch started with
r70098
and continues with
r70284
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug